# phasic_tonic

./: .gitignore  README.md  mkdocs.yml  past  pyproject.toml  setup.py
configs/: rgs14.yaml  test.yaml
data/example/: Rat3_SD4_OD_4_posttrial5-3.npz  Rat9_SD6_OD_2_posttrial4.npz  test.npz
docs/: gen_conf.py  index.md  install.md
docs/examples/: README.md  detect_phasic.py  ex01.npz  example_phasic_tonic.py  plot_analysis5.py  script_example.py  script_myClass.py  tutorial1.ipynb  tutorial_detect_phasic.py  tutorial_detect_phasic_2.py  tutorial_phasic_tonic.py  tutorial_phasic_tonic_visualize.py
notebooks/: Rat5_SD8_HC_0_posttrial3_phasic.npz  Rat5_SD8_HC_0_posttrial3_tonic.npz  build_dataset.ipynb  example_cycles  pipeline2.ipynb  pipeline3.ipynb  string_analysis_hypno.ipynb  template.ipynb  test.ipynb  tutorial copy.ipynb  tutorial.ipynb  tutorial_pipeline.ipynb  visualize_test.py
notebooks/exploratory/: RGS14_analysis.ipynb  bycycle_phasic_tonic.ipynb  comparison2.ipynb  comparison3.ipynb  dataset_exploration.ipynb  dataset_test.ipynb  episodic_duration.ipynb  episodic_duration2.ipynb  pipeline.ipynb  pipeline2.ipynb  pipeline_test.ipynb  runtime.log.1  spectral_analysis_power.ipynb  spectral_analysis_power3.ipynb  spectral_analysis_power5.ipynb  spectral_analysis_power6.ipynb
notebooks/new_method/: build_dataset_CBD.ipynb  func.py  new_phasic.ipynb  new_phasic.py  new_phasic2.ipynb  new_phasic3.ipynb  new_phasic4.ipynb  new_phasic5.ipynb  new_phasic5.py  runtime_logger.py
notebooks/reports/: nameOSbasic.ipynb  (+10 more)
pipeline/: helper.py  utils.py
src/: DataFolder.py  NeuralSignal.py  Signal.py  ThetaSignal.py  __init__.py
tests/: test_core.py  test_detect_phasic.py  test_phasic_tonic.py
(+39 files in other folders)
